fixed misaligned span and label in safari

--- a/src/less/bootstrap3/bootstrap-switch.less
+++ b/src/less/bootstrap3/bootstrap-switch.less
@@ -125,7 +125,7 @@
     margin-top: -1px;
     margin-bottom: -1px;
     z-index: 100;
-    width: 34%;
+    width: 33.333333333%;
     background: @btn-default-bg;
 
     i {
@@ -139,7 +139,7 @@
   span {
     text-align: center;
     z-index: 1;
-    width: 33%;
+    width: 33.333333333%;
 
     &.switch-left {
       color: #f00;
